--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -895,8 +895,8 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(1)">
-                                                    Add GP Merit
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(1)">
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -929,7 +929,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(2)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(2)">
                                                     Add GP Risk
                                                 </button>
                                             </div>
@@ -963,7 +963,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(3)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(3)">
                                                     Add Strategy/Structure Merit
                                                 </button>
                                             </div>
@@ -997,7 +997,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(4)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(4)">
                                                     Add Strategy/Structure Risk
                                                 </button>
                                             </div>
@@ -1031,7 +1031,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(5)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(5)">
                                                     Add Performance Merit
                                                 </button>
                                             </div>
@@ -1065,7 +1065,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(6)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(6)">
                                                     Add Performance Risk
                                                 </button>
                                             </div>
@@ -1099,7 +1099,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(7)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(7)">
                                                     Add Fund Strategy
                                                 </button>
                                             </div>
@@ -1133,7 +1133,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(8)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(8)">
                                                     Add Descriptive Data
                                                 </button>
                                             </div>
@@ -1167,7 +1167,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(9)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(9)">
                                                     Add Targeted Closing Information
                                                 </button>
                                             </div>
@@ -1201,7 +1201,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowDescription(10)">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(10)">
                                                     Add Senior Management Team Overall info
                                                 </button>
                                             </div>
@@ -1259,7 +1259,7 @@
                                                 </td>
                                             </tr>
                                             <div class="col-md-1 pull-left">
-                                                <button type="button" class="btn btn-primary" *ngIf="canEdit()" (click)="addRowManagementTeam()">
+                                                <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowManagementTeam()">
                                                     Add Senior Manager
                                                 </button>
                                             </div>
