--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -930,7 +930,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(2)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -964,7 +964,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(3)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -998,7 +998,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(4)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1032,7 +1032,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(5)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1066,7 +1066,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(6)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1100,7 +1100,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(7)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1134,7 +1134,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(8)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1168,7 +1168,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(9)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1202,7 +1202,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowDescription(10)">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
@@ -1260,7 +1260,7 @@
                                             </tr>
                                             <div class="col-md-1 pull-left">
                                                 <button type="button" class="btn-xs btn-primary" *ngIf="canEdit()" (click)="addRowManagementTeam()">
-                                                    <span class="glyphicon glyphicon-minus"></span>
+                                                    <span class="glyphicon glyphicon-plus"></span>
                                                 </button>
                                             </div>
                                         </table>
