--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -134,7 +134,7 @@
                                                 </div>
                                                 <div class="col-md-4">
                                                     <div class="col-md-4"><b>As of date</b></div>
-                                                    <div class="col-md-6"><input type='text' class="form-control" id="asOfDateOpenFund" name="asOfDateOpenFund" [(ngModel)]="fund.asOfDate"/></div>
+                                                    <div class="col-md-6"><input type='text' class="form-control" id="asOfDateOpenFund" name="asOfDateOpenFund" [(ngModel)]="fund.asOfDateOnePager"/></div>
                                                 </div>
                                                 <div class="col-md-4">
                                                     <td class="col-md-4"><b>NIC status</b></td>
@@ -838,23 +838,23 @@
                                                 <!--<input type="file" #fileUploadNIC (change)="fileLogoChange(fileUploadNIC.files, 'NIC')"/>-->
                                             <!--</form>-->
                                         <!--</div>-->
-                                        <br>
-                                        <table class="col-md-5 table-striped table-condensed">
-                                            <tr>
-                                                <td class="col-md-3">Investments Performance Data as of</td>
-                                                <td class="col-md-2">
-                                                    <div class="input-group">
-                                                        <input type='text' class="form-control" id="asOfDateOnePager" name="asOfDateOnePager" [(ngModel)]="fund.asOfDateOnePager"/>
-                                                        <span class="input-group-addon">
-                                                            <span class="glyphicon glyphicon-calendar"></span>
-                                                        </span>
-                                                    </div>
-                                                </td>
-                                                <!--<td class="col-md-1"></td>-->
-                                                <!--<td class="col-md-2">Benchmark Name</td>-->
-                                                <!--<td class="col-md-4">Investm</td>-->
-                                            </tr>
-                                        </table>
+                                        <!--<br>-->
+                                        <!--<table class="col-md-5 table-striped table-condensed">-->
+                                            <!--<tr>-->
+                                                <!--<td class="col-md-3">Investments Performance Data as of</td>-->
+                                                <!--<td class="col-md-2">-->
+                                                    <!--<div class="input-group">-->
+                                                        <!--<input type='text' class="form-control" id="asOfDateOnePager" name="asOfDateOnePager" [(ngModel)]="fund.asOfDateOnePager"/>-->
+                                                        <!--<span class="input-group-addon">-->
+                                                            <!--<span class="glyphicon glyphicon-calendar"></span>-->
+                                                        <!--</span>-->
+                                                    <!--</div>-->
+                                                <!--</td>-->
+                                                <!--&lt;!&ndash;<td class="col-md-1"></td>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<td class="col-md-2">Benchmark Name</td>&ndash;&gt;-->
+                                                <!--&lt;!&ndash;<td class="col-md-4">Investm</td>&ndash;&gt;-->
+                                            <!--</tr>-->
+                                        <!--</table>-->
                                         <!--<br>-->
                                         <!--<table class="table table-hover table-responsive table-condensed" style="font-size: smaller">-->
                                             <!--<tr>-->
