--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -169,10 +169,20 @@
                                                     </td>
                                                 </tr>
                                                 <tr>
-                                                    <td class="col-md-1">Target size / Hard cap</td>
+                                                    <td class="col-md-1">Target size</td>
                                                     <td class="col-md-3">
-                                                        <input style="width: 30%" type="text" name="targetSize" [(ngModel)]="fund.targetSize" pattern="[+]?[0-9]*\.?[0-9]+" #targetSize="ngModel"/><input style="width: 70%" type="text" name="targetHardCapComment" [(ngModel)]="fund.targetHardCapComment" placeholder="Comment"/>
+                                                        <input style="width: 100%" type="text" name="targetSize" [(ngModel)]="fund.targetSize" pattern="[+]?[0-9]*\.?[0-9]+" #targetSize="ngModel"/>
+                                                        <!--<input style="width: 70%" type="text" name="targetHardCapComment" [(ngModel)]="fund.targetHardCapComment" placeholder="Comment"/>-->
                                                         <div [hidden]="targetSize.valid || targetSize.pristine" class="alert alert-danger">
+                                                            Only positive number could be entered
+                                                        </div>
+                                                    </td>
+                                                </tr>
+                                                <tr>
+                                                    <td class="col-md-1">Hard cap</td>
+                                                    <td class="col-md-3">
+                                                        <input style="width: 100%" type="text" name="hardCap" [(ngModel)]="fund.hardCap" pattern="[+]?[0-9]*\.?[0-9]+" #hardCap="ngModel"/>
+                                                        <div [hidden]="hardCap.valid || hardCap.pristine" class="alert alert-danger">
                                                             Only positive number could be entered
                                                         </div>
                                                     </td>
